--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactmicrobundle",
+  "name": "nodemicrobundle",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -14,45 +14,22 @@
   ],
   "scripts": {
     "clean": "rm -rf dist/",
-    "build": "npm run clean && microbundle --format umd --jsx React.createElement",
-    "watch": "npm run clean && microbundle watch --no-compress --format umd --jsx React.createElement",
+    "build": "npm run clean && microbundle",
+    "watch": "npm run clean && microbundle watch --no-compress",
     "dev": "npm run watch",
-    "test": "jest --watchAll",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "jest --watchAll"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.6",
-    "@storybook/addon-interactions": "^7.6.6",
-    "@storybook/addon-links": "^7.6.6",
-    "@storybook/blocks": "^7.6.6",
-    "@storybook/react": "^7.6.6",
-    "@storybook/react-webpack5": "^7.6.6",
-    "@storybook/test": "^7.6.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.45",
-    "@types/testing-library__react": "^10.2.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "microbundle": "^0.14.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.6.6",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "peerDependencies": {},
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.ts"
-    ]
+    "testEnvironment": "node"
   },
   "dependencies": {}
 }
