--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "author": "Hamza Khalifa",
-  "source": "src/index.tsx",
+  "source": "src/index.ts",
   "main": "dist/index.umd.js",
   "unpkg": "dist/index.umd.js",
   "module": "./dist/index.modern.module.js",
